Update ModelTask.java